docs: record the seven-dimension audit, its backlog, and the rail contract
CLAUDE.md makes docs a same-commit deliverable and the four fixes above
shipped without them. Catching up, and writing down the things that would
otherwise have to be rediscovered.

ROADMAP gains a section for the audit: the four fixes with their commit
SHAs and the measurements behind them, the nine remaining items ranked by
learner impact per unit of effort with their evidence and first step, and —
just as usefully — the eleven dimensions that measured HEALTHY, so nobody
spends a week on registry integrity (512/512, zero orphans), page
robustness (0 uncaught errors across 512 pages), caching (4.4KB warm
navigation) or content correctness (43/43 Java snippets compile on JDK 21,
security guidance NIST SP 800-63B-aligned).

It also records what was discarded and why, so the same weak findings do
not get re-proposed: the nginx `immutable` bug is real but GitHub Pages is
the serving path so that config never runs; dead per-page CSS is a pixel
no-op by construction; the 458-engine consolidation is probably right
eventually but large.

DEVHUB-GUIDE gains an entry for devhub-chapters.js, which was on all 512
pages and documented nowhere. It leads with the trap rather than the
feature list: rail links must NOT be plain anchors, because inside the
hub's iframe that silently desyncs the hub and makes "Mark as Learned"
credit the wrong page. Also documents nextSectionStart() and that rail
styles live in devhub-hf.css rather than being injected.

One cosmetic defect logged rather than fixed: the rail's "you are here"
label is centre-aligned instead of positioned over the current stop, so on
a section-final page it floats above the wrong dot. Pre-existing, noticed
while shipping the Next-up link.

Verified: vcheck 530/530, and every ../frontend/ link in the guide resolves
to a file that exists.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016BruNaW